--- a/style.css
+++ b/style.css
@@ -27,10 +27,10 @@ margin: 0;
    
 }
 
-.section p {
+.section div {
     padding: 20px;
 }
-.section p:hover {
+.section div:hover {
     color: aqua;
 }
 
@@ -44,9 +44,49 @@ margin: 0;
     float: right;
 }
 .sectoin-2 div{
-    padding: 20px;
+    padding: 4px;
 }
 .sectoin-2 div:hover{
    color: aqua;
 }
 
+/* dropdown starts  here  */
+
+.dropdown-menu {
+    border-radius: 12px !important;
+    /* transition: .5s; */
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+    margin-top: 0;
+ }
+ ul.dropdown-menu {
+    padding: 5px 8px 3px 8px !important;
+}
+
+a.dropdown-item {
+    border-radius: 10px !important;
+
+}
+/* dropdown ends here  */
+
+/* submit  icon  */
+
+ .nosubmit {
+    border: none;
+    padding: 0;
+  }
+  
+
+
+
+  input.nosubmit {
+    width: 200px;
+    border: 1px solid #555;
+    border-radius: 20px;
+    display: block;
+    padding: 9px 4px 9px 40px;
+    background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat 13px center;
+  }
+  /* seaerch  ends  here  */
